@@ -7,6 +7,8 @@ PHP                                                                        NEWS
   Stas)
 - Fixed signature generation/validation for zip archives in ext/phar. (Greg)
 
+- Fixed bug #49052 (context option headers freed too early when using
+  --with-curlwrappers). (Jani)
 - Fixed bug #49032 (SplFileObject::fscanf() variables passed by reference).
   (Jani)
 - Fixed bug #49012 (phar tar signature algorithm reports as Unknown (0) in
